compiler/testData/diagnostics/testsWithStdLib/tieredFailures/good/isKlibButBackendFails.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: KLIB
// DIAGNOSTICS: -ERROR_SUPPRESSION

@Suppress("CYCLIC_INHERITANCE_HIERARCHY")
interface A : B
@Suppress("CYCLIC_INHERITANCE_HIERARCHY")
interface B : A
