compiler/testData/diagnostics/testsWithStdLib/tieredFailures/fail/isFir2IrButBackendFails.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: FIR2IR
// DIAGNOSTICS: -ERROR_SUPPRESSION

@Suppress("CYCLIC_INHERITANCE_HIERARCHY")
interface A : B
@Suppress("CYCLIC_INHERITANCE_HIERARCHY")
interface B : A
